--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>App Engine Trebuchet</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="components/style.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="scripts/app.bundle.js"></script>
+    <script src="index.bundle.js"></script>
   </body>
-  <script>
-    require('./renderer.js')
-  </script>
 </html>
